# docs/openapi.yaml
@@ -71,6 +71,17 @@ paths:
         "401":
           $ref: "#/components/responses/Unauthorized"
   /chats/{chatID}:
+    delete:
+      tags: [misc]
+      summary: DeleteSession
+      operationId: deleteSession
+      parameters:
+        - $ref: "#/components/parameters/chatID"
+      responses:
+        "200":
+          description: OK
+        "401":
+          $ref: "#/components/responses/Unauthorized"
     get:
       tags: [chats]
       summary: Sohbet detayı
@@ -89,6 +100,17 @@ paths:
         "404":
           $ref: "#/components/responses/NotFound"
   /chats/{chatID}/messages:
+    get:
+      tags: [misc]
+      summary: ListMessages
+      operationId: listMessages
+      parameters:
+        - $ref: "#/components/parameters/chatID"
+      responses:
+        "200":
+          description: OK
+        "401":
+          $ref: "#/components/responses/Unauthorized"
     post:
       tags: [messages]
       summary: Mesaj gönder (non-stream)
